Skeleton of the solution